<resources>
    <string name="error_internet">Upps! No hay internet</string>

    <string name="main_retrofit_in_progress">Retrieving…</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="created_by">Created</string>
    <string name="dev_name">Edwin</string>
    <string name="pressure">Pressure</string>
    <string name="update">Update</string>
    <string name="humidity">Humidity</string>
    <string name="logo">AppClimaEdwin</string>
    <string name="no_location_detected">"Can access to location. Please check that location services are enabled on your device."</string>
    <string name="permission_denied_explanation">"Permission denied. Location is requiered for this app to work."</string>
    <string name="permission_rationale">"The location permission is needed for use this app."</string>
    <string name="settings">Settings</string>
    <string name="no_internet_access">No Internet Access</string>
    <string name="updated">Updated: "</string>
    <string name="sensation">Sense: "</string>
    <string name="error_ocurred">An occurred when loading data</string>
    <string name="updatedAt">Updated:</string>
    <string name="hello">Hello</string>
    <string name="canceled_action">Cancel action</string>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="settings_title">Settings</string>
    <string name="measure_metric">Unit</string>
    <string name="imagesun">imageSun</string>
    <string name="imageclima">ImageClima</string>
</resources>