<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_camino"
    tools:context=".MainActivity"
    >
    <TextView
        android:id="@+id/tv_address"
        android:fontFamily="@font/karla_extrabold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Milpa Alta, CDMX" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/karla_extrabold"
        app:layout_constraintEnd_toEndOf="@+id/tv_address"
        app:layout_constraintStart_toStartOf="@+id/tv_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_address"
        tools:text="17 febrero, 2022"
        />

    <TextView
        android:id="@+id/tv_status"
        android:fontFamily="@font/karla_extrabolditalic"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toEndOf="@+id/iv_sun"
        app:layout_constraintTop_toTopOf="@+id/iv_sun"
        tools:text="Cielo despejado" />

    <ImageView
        android:id="@+id/iv_sun"
        android:layout_width="142dp"
        android:layout_height="262dp"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        android:src="@drawable/logo"
        tools:visibility="visible"
        android:contentDescription="@string/imagesun" />

    <TextView
        android:id="@+id/tv_temperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/karla_bold"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_status"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="@+id/tv_status"
        app:layout_constraintTop_toBottomOf="@+id/tv_status"
        tools:text="24°" />

    <TextView
        android:id="@+id/tv_tempMin"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tv_tempMax"
        app:layout_constraintStart_toEndOf="@+id/iv_sun"
        app:layout_constraintTop_toBottomOf="@+id/tv_temperatura"
        tools:text="Min: 12°" />

    <TextView
        android:id="@+id/tv_tempMax"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_tempMin"
        app:layout_constraintTop_toBottomOf="@+id/tv_temperatura"
        tools:text="Max:26°" />

    <ProgressBar
        android:id="@+id/progressBarIndicator"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/iv_logo1"
        android:layout_width="145dp"
        android:layout_height="83dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_status"
        app:layout_constraintTop_toTopOf="@+id/iv_sun"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/imageclima" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardElevation="30dp"
        app:cardCornerRadius="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_sun"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_bg2"
            >

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:background="@drawable/gradient_bg2"
            >


            <LinearLayout
                android:id="@+id/detailsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"

                android:orientation="vertical"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="20dp"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@null"
                            android:src="@drawable/sunrise"
                            app:tint="@android:color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/karla_regular"
                            android:text="@string/sunrise"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/sunriseTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/karla_regular"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            tools:text="06:40 AM" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@null"
                            android:src="@drawable/sunset"
                            app:tint="@android:color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/karla_regular"
                            android:text="@string/sunset"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/sunsetTextView"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            tools:text="07:40 PM" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@null"
                            android:src="@drawable/wind"
                            app:tint="@android:color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:fontFamily="@font/karla_regular"
                            android:text="@string/wind"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/windTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/karla_regular"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            tools:text="1.5" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="2dp"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@null"
                            android:src="@drawable/pressure"
                            app:tint="@android:color/white"
                            tools:ignore="ImageContrastCheck" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/pressureTextView"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            tools:text="1023" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@null"
                            android:src="@drawable/humidity"
                            app:tint="@android:color/white"
                            tools:ignore="ImageContrastCheck" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            style='style="@style/TextAppearance.MaterialComponents.Caption'
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/humidityTextView"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            tools:text="100" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@null"
                            android:src="@drawable/info"
                            app:tint="@android:color/white"
                            tools:ignore="ImageContrastCheck" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            style='@style/TextAppearance.MaterialComponents.Caption'
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/created_by"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/developerTextView"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dev_name"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>